--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,4 +1,4 @@
-name: Daily SVG Update
+name: daily-svg-update
 
 on:
   schedule:
@@ -22,9 +22,11 @@ jobs:
 
       - name: Install dependencies (optional, if using a library)
         run: npm install # Or yarn install, if needed for SVG generation
+        working-directory: contribution_chart
 
       - name: Run update script
         run: npm run update-svg
+        working-directory: contribution_chart
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -33,5 +35,5 @@ jobs:
         with:
           default_author: github_actions
           message: 'daily SVG update'
-          add: 'gh-combined-calendar.svg' 
+          add: 'contribution_chart/gh-combined-calendar.svg' 
 
